kubernetes/apps/kube-system/cilium/gateway-api/external.sops.yaml
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.aknuk.dev
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.88.203
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: external.aknuk.dev
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.aknuk.dev'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.aknuk.dev'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: aknuk-dev-production-tls
sops:
  age:
    - recipient: age1ckpjl5l70jve252ure5e356yh05fzumyun66yefgp9yxc6mqqgeshe5z6d
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnbXNJYmhKd2s5VzAzbHdI
[...]
        GPs8FUKPZbC2c1O4f9SfPCczlGiDKmCfc9Qodqd9o3ZK5eNjDi/big==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-06-27T13:18:28Z"
  mac: ENC[AES256_GCM,data:AALD6CPw0L86yq+lMKbYSXTXpAce5N53QA1kLaVwK9SlXWRy8a7K6JrXwrxHhBABOehJqsdl2Bv5s/Cxh+41rq3oUidQ9ID+8BgizN8BMP1mHLMRJZRIvWdo3fE9rbleg2fUdbpYm+l2z8KTirXPdDctrolbrwTmFPonV0UhsDc=,iv:Ch9HhfJ3kygqnhZHeSMCqSAXnOEkqy42sLAXdeFpGP8=,tag:qhVLD98qFy074CzCP8F9Eg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.10.2
